--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "lucide-react": "^0.511.0",
     "mongoose": "^8.15.1",
     "next": "15.3.2",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-medium-image-zoom": "^5.2.14",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
     "zod": "^3.25.49",
     "zustand": "^5.0.5"
