--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "seed": "npx tsx ./lib/db/seed.ts"
   },
   "dependencies": {
+    "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
